--- a/FanglisteLibrary/FanglisteLibrary.csproj
+++ b/FanglisteLibrary/FanglisteLibrary.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Einstellungen.cs" />
     <Compile Include="Fanggerät.cs" />
     <Compile Include="Foto1.cs" />
+    <Compile Include="Link.cs" />
     <Compile Include="Ordner.cs" />
     <Compile Include="PersönlicheFanglisteView.cs" />
     <Compile Include="Fangliste1.cs" />
